--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "dev": "node --env-file .env --watch index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.0.1"
+    "express": "^5.0.1",
+    "mongoose": "^8.9.3"
   }
 }
