--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@clerk/express": "^1.3.31",
+    "body-parser": "^2.0.2",
     "express": "^5.0.1",
-    "mongoose": "^8.9.3"
+    "mongoose": "^8.9.3",
+    "svix": "^1.45.1"
   }
 }
