--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-react": "^5.21.0",
     "@tanstack/react-query": "^5.62.16",
     "axios": "^1.7.9",
+    "dompurify": "^3.2.4",
     "imagekitio-react": "^4.2.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
